# DataForge

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start_backend.bat  start_frontend.bat
.claude/skills/: project-readme-authoring.md
backend/: main.py
backend/agent/: __init__.py  schemas.py
backend/api/: chat.py  export.py  thread_pool.py  upload.py
backend/cache/: __init__.py  adaptive.py
backend/core/: __init__.py  auth.py  config.py  error_handler.py  errors.py  rate_limiter.py  session.py
backend/dataflows/: __init__.py  demo_data.py  sqlite_store.py
backend/eval/: __init__.py  metrics.py  runner.py
backend/graph/: __init__.py  conditional_logic.py  graph_setup.py  orchestrator.py  propagation.py
backend/llm_clients/: __init__.py  factory.py  model_catalog.py  provider_keys.py
backend/memory/: __init__.py  embeddings.py  memory_store.py  reflector.py
backend/models/: __init__.py  schemas.py
backend/prompts/: __init__.py  chart_agent.md  debate_scorer.md  optimist.md  pessimist.md  planner.md  report_agent.md  sql_agent.md  validator.md
backend/tools/: __init__.py  code_executor.py  code_safety.py
backend/utils/: __init__.py  fallback.py  json_parser.py  logging_setup.py  report_exporter.py  text_chunker.py  tool_logging.py  (+1 more)
data/: 用户评价数据.csv
deploy/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
doc/: agent-flow.md  architecture.md  interview-qa.md
docs/: benchmark_result.json
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: benchmark.py  gen_diagrams.py  real_benchmark.py
tests/: conftest.py  mock_llm.py  test_agent_prompts.py  test_agent_reasoning.py  test_agents.py  test_conditional_logic.py  test_dataflows.py  test_debate_quality.py  test_e2e.py  test_eval.py  test_hallucination.py  test_integration.py  test_integration_real_tools.py  test_llm_robustness.py  test_multi_turn.py  test_orchestrator.py  test_performance.py  test_propagation.py  test_react_agent.py  test_sql_security.py  test_sqlite_store.py  test_token_tracker.py  test_tools.py
(+26 files in other folders)
