[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge-ai"
version = "1.0.0"
description = "Multi-Agent 数据分析系统 — 7个Agent协作，CSV上传即分析"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ============ FastAPI 后端 ============
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",      # BaseSettings 配置管理
    "python-multipart>=0.0.6",       # CSV 文件上传
    "sse-starlette>=1.0.0",          # SSE 流式响应

    # ============ Agent 框架 ============
    "langgraph>=0.4.8",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.23",
    "openai>=1.0.0,<2.0.0",

    # ============ 数据处理 ============
    "pandas>=2.3.0",
    "plotly>=5.0.0",                 # 图表生成（服务端生成JSON，前端渲染）
    "chromadb>=0.5.0",               # 向量记忆库（上下文学习）
    "dashscope>=1.20.0",             # 阿里云 embedding（中文最优）

    # ============ 工具 ============
    "python-dotenv>=1.0.0",          # .env 环境变量
    "httpx>=0.24.0",                 # 异步 HTTP 客户端
    "sqlparse>=0.5.0",               # SQL AST 级别安全校验
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",                  # 代码检查 + 格式化
]
local-embed = [
    "sentence-transformers>=2.7.0",  # 本地 embedding 模型（离线可用）
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["tests*", "doc*", "deploy*", "data*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (未使用的导入、未定义的变量等)
    "I",   # isort (导入排序)
    "N",   # pep8-naming (命名规范)
    "B",   # flake8-bugbear (常见bug)
    "UP",  # pyupgrade (语法升级建议)
]
ignore = [
    "E501",  # 行长度由 formatter 处理
    "B008",  # 允许在函数参数中做函数调用（FastAPI 依赖注入需要）
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
